--- a/gorynych_project/gorynych_app/templates/gorynych_app/index.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/index.html
@@ -10,7 +10,10 @@
     <title>Горыныч</title>
 </head>
 <body>
-    <h1>ЗДЕСЬ БУДЕТ ИГРА</h1>
+    <h1>{% for i in game.deck %}
+        {{ i }}
+        {% endfor %}
+    </h1>
     <form action="" method="post">{% csrf_token %}
         <button type="submit" name="add">ДОБАВИТЬ СЛОВО</button>
         <button type="submit" name="cancel">УБРАТЬ СЛОВО</button>
@@ -18,5 +21,6 @@
         <button type="submit" name="check">ЗАКОНЧИТЬ ИГРУ</button>
         <p><input type="text" name="word" autocomplete="off" autofocus></p>
     </form>
+{{ w.word }}
 </body>
 </html>
