--- a/gorynych_project/gorynych_app/templates/gorynych_app/index.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/index.html
@@ -14,6 +14,7 @@
         {{ i }}
         {% endfor %}
     </h1>
+    <h2>ГОРЫНЫЧ: {{ game.number }}</h2>
     <form action="" method="post">{% csrf_token %}
         <button type="submit" name="add">ДОБАВИТЬ СЛОВО</button>
         <button type="submit" name="cancel">УБРАТЬ СЛОВО</button>
@@ -21,6 +22,6 @@
         <button type="submit" name="check">ЗАКОНЧИТЬ ИГРУ</button>
         <p><input type="text" name="word" autocomplete="off" autofocus></p>
     </form>
-{{ w.word }}
 </body>
 </html>
+
