--- a/gorynych_project/gorynych_app/templates/gorynych_app/final.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/final.html
@@ -20,15 +20,13 @@
         {% endfor %}
     </h3>
     <h3>
-        СЛОВА КОМПА до чека:
-        {% for i in game.comp_word_list %}
-        {{ i }}
-        {% endfor %}
-    </h3>
-    <h3>
-        СЛОВА КОМПА ПОСЛЕ чека:
+        СЛОВА КОМПА:
         {% for i in game.final_comp_word_list %}
-        {{ i }}
+        {% if i in game.gorynych_comp %}
+            <span style="color:green">{{ i }}</span>
+        {% else %}
+            {{ i }}
+        {% endif %}
         {% endfor %}
     </h3>
 </body>
