--- a/gorynych_project/gorynych_app/templates/gorynych_app/index.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/index.html
@@ -25,7 +25,8 @@
     <h2>
         {% for i in game.players_word_list %}
         {{ i }}
-        {% endfor %}</h2>
+        {% endfor %}
+    </h2>
     <h3>{% if res %}
         {{ res }}
         {% endif %}
