--- a/gorynych_project/gorynych_app/templates/gorynych_app/final.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/final.html
@@ -10,32 +10,40 @@
     <title>Горыныч</title>
 </head>
 <body>
-    <form action="" method="post">{% csrf_token %}
-        <button type="submit" name="end">НАЧАТЬ ЗАНОВО</button></form>
-    <h1>{% for i in game.deck %}
+    <h5>{% for i in game.deck %}
         {{ i }}
-        {% endfor %}
-    </h1>
-    <h3>ВАШИ СЛОВА:
-        {% for i in game.players_word_list %}
-        {% if i in game.gorynych_user %}
+    {% endfor %}
+    </h5>
+    <p>Ваши слова({{ game.players_word_list|length }}):</p>
+    {% for i in game.players_word_list %}
+        {% if i in game.gorynych_user and i in game.gorynych_comp %}
+            <b><span style="color:green">{{ i }}</span></b>
+        {% elif i in game.gorynych_user %}
             <span style="color:green">{{ i }}</span>
+        {% elif i not in game.final_comp_word_list %}
+            <b>{{ i }}</b>
         {% else %}
             {{ i }}
         {% endif %}
         {% empty %} Вы не составили ни одного слова
-        {% endfor %}
-    </h3>
-    <h3>
-        СЛОВА КОМПА:
-        {% for i in game.final_comp_word_list %}
-        {% if i in game.gorynych_comp %}
+    {% endfor %}
+    <p>Слова компьютера({{ game.final_comp_word_list|length }}):</p>
+    {% for i in game.final_comp_word_list %}
+        {% if i in game.gorynych_comp and i in game.gorynych_user %}
+            <b><span style="color:green">{{ i }}</span></b>
+        {% elif i in game.gorynych_comp %}
             <span style="color:green">{{ i }}</span>
+        {% elif i not in game.players_word_list %}
+            <b>{{ i }}</b>
         {% else %}
             {{ i }}
         {% endif %}
         {% empty %} Компьютер не составил ни одного слова
-        {% endfor %}
-    </h3>
+    {% endfor %}
+    <h4>{{ game.who_won }}</h4>
+
+    <form action="" method="post">{% csrf_token %}
+        <button type="submit" name="end">НОВАЯ ИГРА</button>
+    </form>
 </body>
 </html>
