--- a/gorynych_project/gorynych_app/static/css/styles.css
+++ b/gorynych_project/gorynych_app/static/css/styles.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Lora', serif;
+    color: black;
 }
 
 body {
@@ -10,23 +11,21 @@ body {
 
 input {
     background-color: white;
-    width: 300px;
-    height: 50px;
-    font-size: 45px;
+    width: 222px;
+    height: 30px;
+    font-size: 15px;
 }
 
 button {
     background-color: white;
-    width: 300px;
-    height: 50px;
-    font-size: 25px;
+    width: 230px;
+    height: 30px;
+    font-size: 15px;
 }
 
 a {
-    color: #696969;
+    color: black;
     text-decoration: none;
-    border-bottom: 1px solid #b3b3b3;
-    padding-bottom: 2px;
 }
 
 a:hover {
