--- a/gorynych_project/gorynych_app/templates/gorynych_app/final.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/final.html
@@ -10,38 +10,37 @@
     <title>Горыныч</title>
 </head>
 <body>
-    <h2>{% for i in game.deck %}
+    <h3>{% for i in game.deck %}
         {{ i }}
     {% endfor %}
-    </h2>
+    </h3>
     <p>Ваши слова({{ game.players_word_list|length }}):</p>
     {% for i in game.players_word_list %}
         {% if i in game.gorynych_user and i in game.gorynych_comp %}
-            <b><span style="color:green">{{ i }}</span></b>
+            <b><a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank" style="color:green">{{ i }}</a></b>
         {% elif i in game.gorynych_user %}
-            <span style="color:green">{{ i }}</span>
+            <a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank" style="color:green">{{ i }}</a>
         {% elif i in game.final_comp_word_list %}
-            <b>{{ i }}</b>
+            <b><a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank">{{ i }}</a></b>
         {% else %}
-            {{ i }}
+            <a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank">{{ i }}</a>
         {% endif %}
         {% empty %} Вы не составили ни одного слова
     {% endfor %}
     <p>Слова компьютера({{ game.final_comp_word_list|length }}):</p>
     {% for i in game.final_comp_word_list %}
         {% if i in game.gorynych_comp and i in game.gorynych_user %}
-            <b><span style="color:green">{{ i }}</span></b>
+            <b><a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank" style="color:green">{{ i }}</a></b>
         {% elif i in game.gorynych_comp %}
-            <span style="color:green">{{ i }}</span>
+            <a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank" style="color:green">{{ i }}</a>
         {% elif i in game.players_word_list %}
-            <b>{{ i }}</b>
+            <b><a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank">{{ i }}</a></b>
         {% else %}
-            {{ i }}
+            <a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank">{{ i }}</a>
         {% endif %}
         {% empty %} Компьютер не составил ни одного слова
     {% endfor %}
     <h4>{{ game.who_won }}</h4>
-
     <form action="" method="post">{% csrf_token %}
         <button type="submit" name="end">НОВАЯ ИГРА</button>
     </form>
