--- a/gorynych_project/gorynych_app/templates/gorynych_app/index.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/index.html
@@ -16,33 +16,33 @@
     <title>Горыныч</title>
 </head>
 <body>
-    <h1>
+    <img src="static/img/gor{{ game.number_user }}.png" width="200">
+    <h3>
     {% for i in game.deck %}
         {{ i }}
         {% endfor %}
-    </h1>
-    <img src="static/img/gor{{ game.number_user }}.png" width="200">
+    </h3>
     <form action="" method="post">{% csrf_token %}
+        <input type="text" name="word" autocomplete="off" autofocus>
+        {% if res %}
+            <h6>{{ res }}</h6>
+        {% endif %}
+        <h6>
+        {% for i in game.players_word_list %}
+            {% if i in game.gorynych_user %}
+            <a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank" style="color:green">{{ i }}</a>
+            {% else %}
+                <a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank">{{ i }}</a>
+            {% endif %}
+        {% endfor %}
+        </h6>
         <button type="submit" name="add">ДОБАВИТЬ СЛОВО</button>
         <button type="submit" name="cancel">УБРАТЬ СЛОВО</button>
         <button type="submit" name="count">ПОСЧИТАТЬ СЛОВА</button>
         <button type="submit" name="check">ЗАКОНЧИТЬ ИГРУ</button>
         <button type="submit" name="end" onclick="return confirmAction()">НОВАЯ ИГРА</button>
         <button type="submit" name="doc">ПРАВИЛА ИГРЫ</button>
-        <p><input type="text" name="word" autocomplete="off" autofocus></p>
     </form>
-    {% if res %}
-            {{ res }}
-        {% endif %}
-    <h3>
-        {% for i in game.players_word_list %}
-            {% if i in game.gorynych_user %}
-                <span style="color:green">{{ i }}</span>
-            {% else %}
-                {{ i }}
-            {% endif %}
-        {% endfor %}
-    </h3>
 </body>
 </html>
 
