remove wiki, add gramota

--- a/gorynych_project/gorynych_app/templates/gorynych_app/final.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/final.html
@@ -17,26 +17,26 @@
     <p>Ваши слова({{ game.players_word_list|length }}):</p>
     {% for i in game.players_word_list %}
         {% if i in game.gorynych_user and i in game.gorynych_comp %}
-            <b><a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank" style="color:green">{{ i }}</a></b>
+            <b><a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank" style="color:green">{{ i }}</a></b>
         {% elif i in game.gorynych_user %}
-            <a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank" style="color:green">{{ i }}</a>
+            <a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank" style="color:green">{{ i }}</a>
         {% elif i in game.final_comp_word_list %}
-            <b><a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank">{{ i }}</a></b>
+            <b><a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank">{{ i }}</a></b>
         {% else %}
-            <a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank">{{ i }}</a>
+            <a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank">{{ i }}</a>
         {% endif %}
         {% empty %} Вы не составили ни одного слова
     {% endfor %}
     <p>Слова компьютера({{ game.final_comp_word_list|length }}):</p>
     {% for i in game.final_comp_word_list %}
         {% if i in game.gorynych_comp and i in game.gorynych_user %}
-            <b><a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank" style="color:green">{{ i }}</a></b>
+            <b><a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank" style="color:green">{{ i }}</a></b>
         {% elif i in game.gorynych_comp %}
-            <a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank" style="color:green">{{ i }}</a>
+            <a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank" style="color:green">{{ i }}</a>
         {% elif i in game.players_word_list %}
-            <b><a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank">{{ i }}</a></b>
+            <b><a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank">{{ i }}</a></b>
         {% else %}
-            <a href="https://ru.wikipedia.org/wiki/{{ i|title }}" target="_blank">{{ i }}</a>
+            <a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank">{{ i }}</a>
         {% endif %}
         {% empty %} Компьютер не составил ни одного слова
     {% endfor %}
