--- a/gorynych_project/gorynych_app/templates/gorynych_app/rules.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/rules.html
@@ -16,6 +16,7 @@
     а также использовать букву "и" вместо "й" и "е" вместо "ё".</p>
     <p>В начале игры вам и компьютеру даётся по 3 головы Горыныча. <br>
         Одна голова позволяет повторить одну букву.</p>
+    <p>Вы можете нажать на слово и посмотреть информацию о нём в толковом словаре</p>
         <p>В конце игры слова с повторами букв имеют зеленый цвет, а слова, которые совпадают <br>
             у вас и у компьютера выделены жирным шрифтом.</p>
 <p><a href="#" onclick="history.back();">Назад</a></p>
