--- a/gorynych_project/gorynych_app/templates/gorynych_app/index.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/index.html
@@ -16,6 +16,7 @@
     <title>Горыныч</title>
 </head>
 <body>
+    {% if request.user.is_authenticated %}
     <img src="static/img/gor{{ game.number_user }}.png" width="200">
     <h3>
     {% for i in game.deck %}
@@ -42,7 +43,12 @@
         <button type="submit" name="check">ЗАКОНЧИТЬ ИГРУ</button>
         <button type="submit" name="end" onclick="return confirmAction()">НОВАЯ ИГРА</button>
         <button type="submit" name="doc">ПРАВИЛА ИГРЫ</button>
+        <button type="submit" name="logout">ВЫЙТИ ИЗ АККАУНТА</button>
     </form>
+    {% else %}
+    <h2><a href="{% url 'login' %}">Вход</a></h2>
+    <h2><a href="{% url 'register' %}">Регистрация</a></h2>
+    {% endif %}
 </body>
 </html>
 
