--- a/gorynych_project/gorynych_app/templates/gorynych_app/rules.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/rules.html
@@ -14,9 +14,10 @@
 <p>Слова должны быть существительными в единственном числе в именительном падеже.</p>
     <p>Нельзя использовать слова в уменьшительно-ласкательной форме, имена собственные, <br> аббревиатуры, сленг,
     а также использовать букву "и" вместо "й" и "е" вместо "ё".</p>
-    <p>В начале игры вам и компьютеру даётся по 3 головы Горыныча. <br>
-        Одна голова позволяет повторить одну букву.</p>
-    <p>Вы можете нажать на слово и посмотреть информацию о нём в толковом словаре</p>
+    <p>В начале игры вам и компьютеру даётся по 3 головы Горыныча. Одна голова позволяет<br>
+         повторить одну букву в слове. За каждые 20 придуманных слов вам и компьютеру<br>
+         даётся одна голова. При условии, что у вас к этому моменту будет меньше трёх голов. </p>
+    <p>Вы можете нажать на слово и посмотреть информацию о нём в толковом словаре.</p>
         <p>В конце игры слова с повторами букв имеют зеленый цвет, а слова, которые совпадают <br>
             у вас и у компьютера выделены жирным шрифтом.</p>
 <p><a href="#" onclick="history.back();">Назад</a></p>
