--- a/gorynych_project/gorynych_app/templates/gorynych_app/index.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/index.html
@@ -42,8 +42,9 @@
         <button type="submit" name="count">ПОСЧИТАТЬ СЛОВА</button>
         <button type="submit" name="check">ЗАКОНЧИТЬ ИГРУ</button>
         <button type="submit" name="end" onclick="return confirmAction()">НОВАЯ ИГРА</button>
+        <button type="submit" name="rec">РЕКОРДЫ</button>
         <button type="submit" name="doc">ПРАВИЛА ИГРЫ</button>
-        <button type="submit" name="logout">ВЫЙТИ ИЗ АККАУНТА</button>
+        <button type="submit" name="logout">ВЫЙТИ</button>
     </form>
     {% else %}
     <h2><a href="{% url 'login' %}">Вход</a></h2>
