--- a/gorynych_project/gorynych_app/templates/gorynych_app/index.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/index.html
@@ -8,10 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script>
-    function confirmAction(){
+    function confirmAction1(){
       var confirmed = confirm("Начать новую игру?");
       return confirmed;
-}
+    }
+    function confirmAction2(){
+      var confirmed = confirm("Вы уверены, что хотите закончить игру?");
+      return confirmed;
+    }
     </script>
     <title>Горыныч</title>
 </head>
@@ -40,8 +44,8 @@
         <button type="submit" name="add">ДОБАВИТЬ СЛОВО</button>
         <button type="submit" name="cancel">УБРАТЬ СЛОВО</button>
         <button type="submit" name="count">ПОСЧИТАТЬ СЛОВА</button>
-        <button type="submit" name="check">ЗАКОНЧИТЬ ИГРУ</button>
-        <button type="submit" name="end" onclick="return confirmAction()">НОВАЯ ИГРА</button>
+        <button type="submit" name="check" onclick="return confirmAction2()">ЗАКОНЧИТЬ ИГРУ</button>
+        <button type="submit" name="end" onclick="return confirmAction1()">НОВАЯ ИГРА</button>
         <button type="submit" name="rec">РЕКОРДЫ</button>
         <button type="submit" name="doc">ПРАВИЛА ИГРЫ</button>
         <button type="submit" name="logout">ВЫЙТИ</button>
