--- a/gorynych_project/gorynych_app/templates/gorynych_app/index.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/index.html
@@ -18,6 +18,7 @@
     }
     </script>
     <title>Горыныч</title>
+    <link rel="icon" type="image/png" href="{% static 'img/gor1.png' %}">
 </head>
 <body>
     {% if request.user.is_authenticated %}
