--- a/gorynych_project/gorynych_app/templates/gorynych_app/login.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/login.html
@@ -18,7 +18,7 @@
                 <button type="submit">Войти</button>
             </form>
         </div>
-        <p><a href="#" onclick="history.back();">Назад</a></p>
+        <h3><a href="{% url 'register' %}">Регистрация</a></h3>
     </div>
 </body>
 </html>
