add added phrasesÑ

--- a/gorynych_project/gorynych_app/templates/gorynych_app/rules.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/rules.html
@@ -16,7 +16,8 @@
     а также использовать букву "и" вместо "й" и "е" вместо "ё".</p>
     <p>В начале игры вам и компьютеру даётся по 3 головы Горыныча. Одна голова позволяет<br>
          повторить одну букву в слове. За каждые 20 придуманных слов вам и компьютеру<br>
-         даётся одна голова. При условии, что у вас к этому моменту будет меньше трёх голов. </p>
+         даётся одна голова. Также за слово длиной более 5 букв вы будете получать одну голову. <br>
+        Но это только при условии, что у Горыныча в этот момент будет меньше трёх голов.  </p>
     <p>Вы можете нажать на слово и посмотреть информацию о нём в толковом словаре.</p>
         <p>В конце игры слова с повторами букв имеют зеленый цвет, а слова, которые совпадают <br>
             у вас и у компьютера выделены жирным шрифтом.</p>
