edit html color

--- a/gorynych_project/gorynych_app/templates/gorynych_app/rules.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/rules.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <h1>Правила игры</h1>
-<p>Слова должны быть существительными в единственном числе в именительном падеже.</p>
-    <p>Нельзя использовать слова в уменьшительно-ласкательной форме, имена собственные, <br> аббревиатуры, сленг,
-    а также использовать букву "и" вместо "й" и "е" вместо "ё".</p>
-    <p>В начале игры вам и компьютеру даётся по 3 головы Горыныча. Одна голова позволяет<br>
-         повторить одну букву в слове. За каждые 20 придуманных слов вам и компьютеру<br>
-         даётся одна голова. Также за слово длиной более 5 букв вы будете получать одну голову. <br>
-        Но это только при условии, что у Горыныча в этот момент будет меньше трёх голов.  </p>
+    <p>Слова должны быть существительными в единственном числе в именительном падеже.</p>
+    <p>Нельзя использовать слова в уменьшительно-ласкательной форме, имена собственные, <br>
+       аббревиатуры, сленг, а также использовать букву "и" вместо "й" и "е" вместо "ё".</p>
+    <p>В начале игры вам даётся 3 головы Горыныча. Одна голова позволяет повторить одну<br>
+        букву в слове. За каждые 20 придуманных слов, а также за каждое слово длиной более<br>
+        5 букв вы будете получать одну голову. Но это только при условии, что у Горыныча в<br>
+        этот момент будет меньше трёх голов. Компьютер играет по таким же правилам.</p>
     <p>Вы можете нажать на слово и посмотреть информацию о нём в толковом словаре.</p>
-        <p>В конце игры слова с повторами букв имеют зеленый цвет, а слова, которые совпадают <br>
-            у вас и у компьютера выделены жирным шрифтом.</p>
+    <p>Слова с повторами букв имеют зеленый цвет, а длинее 5 букв и без повторов - синий.<br>
+       Слова, совпадающие у вас с компьютером, выделены жирным шрифтом.</p>
 <p><a href="#" onclick="history.back();">Назад</a></p>
 </body>
 </html>
