--- a/gorynych_project/gorynych_app/templates/gorynych_app/index.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/index.html
@@ -36,9 +36,9 @@
         <h6>
         {% for i in game.players_word_list %}
             {% if i in game.gorynych_user %}
-                <a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank" style="color:green">{{ i }}</a>
+                <a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank" style="color: #138808">{{ i }}</a>
             {% elif i in game.words_without_repeating_user %}
-                <a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank" style="color:blue">{{ i }}</a>
+                <a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank" style="color: #4285B4">{{ i }}</a>
             {% else %}
                 <a href="http://www.gramota.ru/slovari/dic/?bts=x&word={{ i|title }}" target="_blank">{{ i }}</a>
             {% endif %}
