--- a/gorynych_project/gorynych_app/templates/gorynych_app/register.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/register.html
@@ -14,7 +14,7 @@
             {% endif %}
             <h1>Регистрация</h1>
         </div>
-        <p><b>Пароль должен состоять минимум из 8 символов и содержать хотя бы одну цифру, прописную и строчную букву</b></p>
+        <p><b>Пароль должен состоять минимум из 8 символов и содержать цифры и буквы</b></p>
         <div class="form">
             <form action="" method="POST">{% csrf_token %}
             {{ form.as_p }}
