--- a/gorynych_project/gorynych_app/templates/gorynych_app/final.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/final.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>Горыныч</title>
+    <link rel="icon" type="image/png" href="{% static 'img/gor1.png' %}">
 </head>
 <body>
     <h3>{% for i in game.deck %}
