--- a/gorynych_project/gorynych_app/templates/gorynych_app/register.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/register.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
+    <link rel="icon" type="image/png" href="{% static 'img/gor1.png' %}">
 </head>
 <body>
     <div style="display: flex; flex-direction: column; align-items: center; margin-top: 200px;">
