--- a/gorynych_project/gorynych_app/templates/gorynych_app/final.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/final.html
@@ -11,45 +11,45 @@
     <link rel="icon" type="image/png" href="{% static 'img/gor1.png' %}">
 </head>
 <body>
-    <h3>{% for i in game.deck %}
+    <h3>{% for i in game_2.deck %}
         {{ i }}
     {% endfor %}
     </h3>
-    <p>Ваши слова({{ game.players_word_list|length }}):</p>
-    {% for i in game.players_word_list %}
-        {% if i in game.words_without_repeating_user and i in game.words_without_repeating_comp %}
+    <p>Ваши слова({{ game_2.players_word_list|length }}):</p>
+    {% for i in game_2.players_word_list %}
+        {% if i in game_2.words_without_repeating_user and i in game.words_without_repeating_comp %}
             <b><a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank" style="color: #4285B4">{{ i }}</a></b>
-        {% elif i in game.words_without_repeating_user %}
+        {% elif i in game_2.words_without_repeating_user %}
             <a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank" style="color: #4285B4">{{ i }}</a>
-        {% elif i in game.gorynych_user and i in game.gorynych_comp %}
+        {% elif i in game_2.gorynych_user and i in game.gorynych_comp %}
             <b><a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank" style="color: #138808">{{ i }}</a></b>
-        {% elif i in game.gorynych_user %}
+        {% elif i in game_2.gorynych_user %}
             <a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank" style="color: #138808">{{ i }}</a>
-        {% elif i in game.final_comp_word_list %}
+        {% elif i in game_2.final_comp_word_list %}
             <b><a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank">{{ i }}</a></b>
         {% else %}
             <a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank">{{ i }}</a>
         {% endif %}
         {% empty %} Вы не составили ни одного слова
     {% endfor %}
-    <p>Слова компьютера({{ game.final_comp_word_list|length }}):</p>
-    {% for i in game.final_comp_word_list %}
-        {% if i in game.words_without_repeating_user and i in game.words_without_repeating_comp %}
+    <p>Слова компьютера({{ game_2.final_comp_word_list|length }}):</p>
+    {% for i in game_2.final_comp_word_list %}
+        {% if i in game_2.words_without_repeating_user and i in game.words_without_repeating_comp %}
             <b><a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank" style="color: #4285B4">{{ i }}</a></b>
-        {% elif i in game.words_without_repeating_comp %}
+        {% elif i in game_2.words_without_repeating_comp %}
             <a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank" style="color: #4285B4">{{ i }}</a>
-        {% elif i in game.gorynych_comp and i in game.gorynych_user %}
+        {% elif i in game_2.gorynych_comp and i in game.gorynych_user %}
             <b><a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank" style="color: #138808">{{ i }}</a></b>
-        {% elif i in game.gorynych_comp %}
+        {% elif i in game_2.gorynych_comp %}
             <a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank" style="color: #138808">{{ i }}</a>
-        {% elif i in game.players_word_list %}
+        {% elif i in game_2.players_word_list %}
             <b><a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank">{{ i }}</a></b>
         {% else %}
             <a href="https://gramota.ru/poisk?query={{ i|title }}&mode=slovari&dicts[]=42" target="_blank">{{ i }}</a>
         {% endif %}
         {% empty %} Компьютер не составил ни одного слова
     {% endfor %}
-    <h4>{{ game.who_won.0 }}</h4>
+    <h4>{{ game_2.who_won.0 }}</h4>
     <form action="" method="post">{% csrf_token %}
         <button type="submit" name="end">НОВАЯ ИГРА</button>
     </form>
