--- a/gorynych_project/gorynych_app/templates/gorynych_app/index.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/index.html
@@ -48,7 +48,7 @@
         <button type="submit" name="count">ПОСЧИТАТЬ СЛОВА</button>
         <button type="submit" name="check" onclick="return confirmAction2()">ЗАКОНЧИТЬ ИГРУ</button>
         <button type="submit" name="end" onclick="return confirmAction1()">НОВАЯ ИГРА</button>
-        <button type="submit" name="rec">РЕКОРДЫ</button>
+        <button type="submit" name="rec">РЕЙТИНГ</button>
         <button type="submit" name="doc">ПРАВИЛА ИГРЫ</button>
         <button type="submit" name="logout">ВЫЙТИ</button>
     </form>
