--- a/gorynych_project/gorynych_app/templates/gorynych_app/rules.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/rules.html
@@ -17,9 +17,11 @@
        аббревиатуры, сленг, а также использовать букву "и" вместо "й" и "е" вместо "ё".</p>
     <p>В начале игры вам даётся 3 головы Горыныча. Одна голова позволяет повторить одну<br>
         букву в слове. За каждые 20 придуманных слов, а также за каждое слово длиной более<br>
-        5 букв вы будете получать одну голову. Но это только при условии, что у Горыныча в<br>
-        этот момент будет меньше трёх голов. Компьютер играет по таким же правилам.</p>
+        5 букв вы будете получать одну голову, при условии, что у Горыныча в этот момент<br>
+        будет меньше трёх голов. Если оба варианта прибавления головы произошли в один ход,<br>
+        то головы не суммируются. Компьютер играет по таким же правилам.</p>
     <p>Вы можете нажать на слово и посмотреть информацию о нём в толковом словаре.</p>
+    <p>В рейтинге игроков можно посмотреть статистику каждого игрока и его рекордную игру.</p>
     <p>Слова с повторами букв имеют зеленый цвет, а длинее 5 букв и без повторов - синий.<br>
        Слова, совпадающие у вас с компьютером, выделены жирным шрифтом.</p>
 <p><a href="#" onclick="history.back();">Назад</a></p>
