--- a/gorynych_project/gorynych_app/templates/gorynych_app/statistics.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/statistics.html
@@ -11,7 +11,8 @@
     <link rel="icon" type="image/png" href="{% static 'img/gor1.png' %}">
 </head>
 <body>
-    <h1>Статистика игр</h1>
+    <h1>"{{ user }}"</h1>
+    <h2>Статистика игр</h2>
     <div style="text-align: center;">
         <table border="1" cellspacing="0" cellpadding="20" style="display: inline-block;">
         <tr>
@@ -20,12 +21,27 @@
             <th>Ничьи</th>
             <th>Поражения</th>
         </tr>
-            {% for i in stat %}
-            <th>{{i.number_of_games}}</th>
-            <th>{{i.victory}}</th>
-            <th>{{i.dead_heat}}</th>
-            <th>{{i.defeat}}</th>
+            <tr>
+                {% for i in stat %}
+                <th>{{i.number_of_games}}</th>
+                <th>{{i.victory}}</th>
+                <th>{{i.dead_heat}}</th>
+                <th>{{i.defeat}}</th>
+            </tr>
             {% endfor %}
+        </table>
+        <br>
+        <h2>Рекорды (топ-3)</h2>
+        <table border="1" cellspacing="0" cellpadding="20" style="display: inline-block;">
+            <tr>
+                <th>{{ list_rec.0 }}</th>
+            </tr>
+            <tr>
+                <th>{{ list_rec.1 }}</th>
+            </tr>
+            <tr>
+                <th>{{ list_rec.2 }}</th>
+            </tr>
         </table>
     </div>
 <p><a href="#" onclick="history.back();">Назад</a></p>
