--- a/gorynych_project/gorynych_app/templates/gorynych_app/statistics.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/statistics.html
@@ -31,15 +31,18 @@
             {% endfor %}
         </table>
         <br>
-        <h2>Рекорды (топ-3)</h2>
+        <h2>Рекорды</h2>
         <table border="1" cellspacing="0" cellpadding="20" style="display: inline-block;">
             <tr>
+                <th>Золотой</th>
                 <th>{{ list_rec.0 }}</th>
             </tr>
             <tr>
+                <th>Серебряный</th>
                 <th>{{ list_rec.1 }}</th>
             </tr>
             <tr>
+                <th>Бронзовый</th>
                 <th>{{ list_rec.2 }}</th>
             </tr>
         </table>
