--- a/gorynych_project/gorynych_app/templates/gorynych_app/rec.html
+++ b/gorynych_project/gorynych_app/templates/gorynych_app/rec.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <title>Рекорды</title>
+    <title>Рейтинг игроков</title>
     <link rel="icon" type="image/png" href="{% static 'img/gor1.png' %}">
 </head>
 <body>
